--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test": "jest --detectOpenHandles --verbose --silent --config jest.config.ts",
     "test:watch": "jest --watch --config jest.config.ts",
     "typecheck": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p tsconfig.jest.json",
-    "lint": "eslint --ext=.js,.ts,.tsx --fix"
+    "lint": "eslint --ext=.js,.ts,.tsx --fix",
+    "generate:openapi": "tsx src/api-docs/openapi-writer.ts",
+    "optic:lint": "optic lint src/api-docs/openapi.yml",
+    "optic:diff": "optic diff src/api-docs/openapi.yml --check --web --base main",
+    "generate:api-docs": "rm -rf docs && npx redocly build-docs src/api-docs/openapi.yml -o docs/api-docs.html"
   },
   "devDependencies": {
     "@bahmutov/cy-api": "2.2.8",
@@ -27,6 +31,7 @@
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "0.2.2",
     "@faker-js/faker": "9.4.0",
+    "@redocly/cli": "1.27.2",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.14",
@@ -34,6 +39,7 @@
     "@types/node": "22.10.7",
     "@typescript-eslint/eslint-plugin": "8.20.0",
     "@typescript-eslint/parser": "8.20.0",
+    "@useoptic/optic": "1.0.5",
     "cy-retryable-before": "1.0.2",
     "cy-spok": "1.6.2",
     "cypress": "14.0.0",
@@ -61,9 +67,11 @@
     "typescript": "5.7.3"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@prisma/client": "6.2.1",
     "cors": "2.8.5",
     "express": "4.21.2",
-    "prisma": "6.2.1"
+    "prisma": "6.2.1",
+    "zod": "^3.24.1"
   }
 }
