--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-no-only-tests": "3.3.0",
     "eslint-plugin-prettier": "5.2.3",
     "jest": "29.7.0",
+    "jest-mock-extended": "4.0.0-beta1",
     "lodash": "4.17.21",
     "nodemon": "3.1.9",
     "npm-run-all2": "7.0.2",
@@ -67,11 +68,11 @@
     "typescript": "5.7.3"
   },
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^7.3.0",
+    "@asteasolutions/zod-to-openapi": "7.3.0",
     "@prisma/client": "6.2.1",
     "cors": "2.8.5",
     "express": "4.21.2",
     "prisma": "6.2.1",
-    "zod": "^3.24.1"
+    "zod": "3.24.1"
   }
 }
