--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "db:sync": "npx prisma db push --force-reset && npx prisma generate",
     "reset:db": "tsx ./scripts/global-setup.ts",
     "start": "sh ./scripts/env-setup.sh && npm run db:sync && npm run reset:db && nodemon",
+    "kafka:reset-logs": "rm -rf cypress/movie-events.log",
+    "kafka:start": "docker compose -f ./src/events/kafka-cluster.yml up -d --no-recreate",
+    "kafka:stop": "docker compose -f ./src/events/kafka-cluster.yml down",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|ts|json)\"",
     "fix:format": "npm run prettier -- --write",
     "validate": "npm-run-all --parallel typecheck lint test fix:format",
@@ -43,6 +46,7 @@
     "cy-retryable-before": "1.0.2",
     "cy-spok": "1.6.2",
     "cypress": "14.0.0",
+    "cypress-ajv-schema-validator": "1.4.0",
     "cypress-data-session": "2.8.6",
     "cypress-map": "1.43.0",
     "cypress-recurse": "1.35.3",
@@ -72,6 +76,7 @@
     "@prisma/client": "6.2.1",
     "cors": "2.8.5",
     "express": "4.21.2",
+    "kafkajs": "2.2.4",
     "prisma": "6.2.1",
     "zod": "3.24.1"
   }
